--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: maven:3.9.9-eclipse-temurin-17
+image: maven:latest
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
@@ -11,6 +11,7 @@ cache:
 stages:
   - build
   - test
+  - install
 
 build:
   stage: build
@@ -21,3 +22,11 @@ test:
   stage: test
   script:
     - mvn test
+
+install:
+  stage: install
+  script:
+    - mvn install
+  artifacts:
+    paths:
+      - target/*.jar
