.jar file config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ install:
   stage: install
   script:
     - mvn install
+    - cp target/MavenProject-1.0-SNAPSHOT.jar .
   artifacts:
     paths:
-      - target/*.jar
+      - "*.jar"
