--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
     </dependencies>
 
     <build>
+        <finalName>SimbaTech</finalName>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -40,6 +42,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <finalName>SimbaTech</finalName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
